# github_v3_rust

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
github_v3/: enum.Method.html  index.html  macro.custom_enum_decode!.html  macro.custom_enum_decode_encode!.html  macro.custom_enum_encode!.html  sidebar-items.js  struct.Authorization.html  trait.CommitCommenter.html  trait.IssueCommenter.html  trait.PullRequester.html  trait.Repoer.html
github_v3/commit_comments/: sidebar-items.js  trait.CommitCommenter.html
github_v3/github_client/: index.html  sidebar-items.js
github_v3/issue_comments/: sidebar-items.js  trait.IssueCommenter.html
github_v3/pull_requests/: sidebar-items.js  trait.PullRequester.html
github_v3/repos/: sidebar-items.js  trait.Repoer.html
github_v3/types/: enum.DeletedStatus.html  enum.GitErr.html  enum.MergeFailure.html  enum.MergedResult.html  enum.MergedStatus.html  enum.SortDirection.html  index.html  sidebar-items.js  struct.Branch.html  struct.ContributorsQuery.html  struct.FullBranch.html  struct.GitTm.html  struct.Issue.html  struct.LanguagePile.html  struct.MergeRequest.html  struct.Organization.html  struct.PushEvent.html  struct.Tag.html  struct.Team.html  type.Body.html  type.BranchName.html  type.Filename.html  type.HeadQuery.html  type.IssueId.html  type.Message.html  type.OrganizationName.html  type.Sha.html  type.Url.html
hyper/header/: struct.HeadersItems.html
hyper/net/: struct.NetworkConnections.html
rustc_serialize/json/: struct.Parser.html
src/: github_client.rs  lib.rs  types.rs
src/repos/: mod.rs  (+2 more)
(+167 files in other folders)
