[package]
name = "github_v3"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]

[dependencies]
hyper = "0.6.10"
rustc-serialize = "0.3.16"
time = "*"

[dev-dependencies]
expectest = "*"

[dev-dependencies.rusty-mock]
git = "https://github.com/acmcarther/rusty-mock"
rev = "30e3da6fa169afd1436fa522754a14187808a5a3"
